--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,36 @@
 version: "3.8"
 
 services:
-  postgresdb:
+  postgres:
     image: postgres
     restart: unless-stopped
-    env_file: ./.env
+    env_file:
+      - .env
     environment:
-      - POSTGRES_USER=$POSTGRESDB_USER
-      - POSTGRES_PASSWORD=$POSTGRESDB_ROOT_PASSWORD
-      - POSTGRES_DB=$POSTGRESDB_DATABASE
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DATABASE=${POSTGRES_DATABASE}
     ports:
-      - $POSTGRESDB_LOCAL_PORT: $POSTGRESDB_DOCKER_PORT
+      - "${POSTGRES_LOCAL_PORT}:${POSTGRES_DOCKER_PORT}"
     volumes:
-      - db:/var/lib/postgres
+      - db:/var/lib/postgresql/data
+
   app:
     depends_on:
-      - postgresdb
-    build: ..
+      - postgres
+    build:
+      context: .
     restart: on-failure
-    env_file: ./.env
-    ports:
-      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
+    env_file:
+      - .env
     environment:
-      SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:postgresql://postgresdb:$POSTGRESDB_DOCKER_PORT/$POSTGRESDB_DATABASE",
-        "spring.datasource.username" : "$POSTGRESDB_USER",
-        "spring.datasource.password" : "$POSTGRESDB_ROOT_PASSWORD",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.PostgreSQLDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update"
-      }'
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:${POSTGRES_DOCKER_PORT}/${POSTGRES_DATABASE}
+      - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
+      - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
+      - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.PostgreSQLDialect
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+    ports:
+      - "${SPRING_LOCAL_PORT}:${SPRING_DOCKER_PORT}"
     volumes:
       - .m2:/root/.m2
     stdin_open: true
@@ -36,3 +38,4 @@ services:
 
 volumes:
   db:
+
